# monopod-sdk

./: .gitignore  .tags  .tags1  CMakeLists.txt  README.md  build_and_install.cmake  compile_commands.json
cmake/: build_and_install_monopodsdk.cmake
demos/: CMakeLists.txt  demo_leg_sine_position.cpp  demo_planarizer.cpp  demo_print_position_sdk.cpp  demo_print_sdk.cpp  sine_position_control.cpp  sine_position_control.hpp
docs/doxygen/: CMakeLists.txt
docs/sphinx/: CMakeLists.txt  conf.py  index.html  index.rst
docs/sphinx/blmc_drivers_docs/: homing.rst
docs/sphinx/breathe/: monopod_drivers_core.rst
docs/sphinx/monopod_sdk_docs/: monopod_drivers.rst
docs/sphinx/monopod_sdk_docs/getting_started/: index.rst
docs/sphinx/monopod_sdk_docs/getting_started/blmc_drivers/: index.rst
docs/sphinx/monopod_sdk_docs/getting_started/monopod_drivers/: index.rst
docs/sphinx/monopod_sdk_docs/introduction/: index.rst
include/monopodSDK/: motor_board.hpp
include/monopod_sdk/: common_header.hpp  mode.hpp  monopod.hpp
include/monopod_sdk/monopod_drivers/: encoder_joint_module.hpp  encoder_joint_modules.hpp  leg.hpp  motor_joint_module.hpp  planarizer.hpp
include/monopod_sdk/monopod_drivers/devices/: boards.hpp  can_bus.hpp  device_interface.hpp  encoder.hpp  motor.hpp
include/monopod_sdk/monopod_drivers/utils/: os_interface.hpp  polynome.hpp  polynome.hxx
src/: CMakeLists.txt  boards.cpp  can_bus.cpp  easylogging++.cc  encoder.cpp  encoder_joint_module.cpp  monopod.cpp  motor.cpp  motor_joint_module.cpp
src/Core/: CMakeLists.txt
src/Core/demos/: demo_threads.cpp
src/Core/include/monopod_sdk/: monopod.hpp
src/Core/src/: monopod.cpp
src/blmc_drivers/: CMakeLists.txt
src/blmc_drivers/demos/: const_torque_control.hpp  demo_1_motor.cpp  demo_1_motor_print_everything.cpp  demo_leg.cpp  demo_print_analog_sensors.cpp  pd_control.hpp  sine_position_control.cpp  sine_position_control.hpp  sine_torque_control.hpp
src/blmc_drivers/include/monopod_sdk/blmc_drivers/: blmc_joint_module.hpp  blmc_joint_modules.hpp
src/blmc_drivers/include/monopod_sdk/blmc_drivers/devices/: analog_sensor.hpp  can_bus.hpp  leg.hpp  motor.hpp  motor_board.hpp
src/blmc_drivers/include/monopod_sdk/blmc_drivers/utils/: polynome.hpp
src/blmc_drivers/src/: analog_sensors.cpp  blmc_joint_module.cpp  can_bus.cpp  motor.cpp  motor_board.cpp  serial_reader.cpp
src/blmc_drivers/src/programs/: can_encoder_index_test.cpp
src/blmc_drivers/src/utils/: polynome.cpp
src/core/demos/: demo_threads.cpp
src/core/include/monopod_sdk/: monopod.hpp
src/core/src/: monopod.cpp
src/monopod_drivers/: CMakeLists.txt
src/monopod_drivers/demos/: demo_inference.cpp  demo_leg.cpp  demo_leg_sine_position.cpp  demo_monopod.cpp  demo_planarizer.cpp  demo_print_position_sdk.cpp  demo_threads.cpp  pd_control.hpp  sine_position_control.cpp  sine_position_control.hpp
src/monopod_drivers/include/monopod_sdk/: common_header.hpp  monopod.hpp
src/monopod_drivers/include/monopod_sdk/monopod_drivers/: blmc_joint_module.hpp  blmc_joint_modules.hpp  common_header.hpp  encoder.hpp  leg.hpp  monopod.hpp  motor_joint_modules.hpp  planarizer.hpp
src/monopod_drivers/include/monopod_sdk/monopod_drivers/devices/: boards.hpp  can_bus_monopod.hpp  encoder.hpp  motor.hpp  motor_board.hpp
src/monopod_drivers/src/: blmc_joint_module.cpp  boards.cpp  can_bus.cpp  can_bus_monopod.cpp  easylogging++.cc  encoder.cpp  encoder_joint_module.cpp  monopod.cpp  motor.cpp  motor_board.cpp  motor_joint_module.cpp  planarizer.cpp
src/monopod_sdk/: CMakeLists.txt
src/utils/: polynome.cpp
src0/: CMakeLists.txt
src0/include/myproject/: test.h
src0/src/: test.cpp
tests/: main.cpp
